--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.1.0
-
-
+  image_picker: ^0.6.1+4 # ALlows images to be taken with camera or gallery through app. For IOS requires special permission changes. https://pub.dev/packages/image_picker#ios
+  path_provider: ^1.3.0 # Helps us find paths in the local file system - https://pub.dev/packages/path_provider#-readme-tab-
+  path: ^1.6.4 # Allows us to join local file system paths -  https://pub.dev/packages/path#-readme-tab-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -30,29 +31,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
