Added in Google Maps. Not working, doesn't seem to pick up API key inside AndroidManifest even thouhg it's there.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="great_places"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDH-_uP6ghQkCRQKsDfMTbS_94_BJlMkDs"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
