--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,10 @@ dependencies:
   path_provider: ^1.3.0 # Helps us find paths in the local file system - https://pub.dev/packages/path_provider#-readme-tab-
   path: ^1.6.4 # Allows us to join local file system paths -  https://pub.dev/packages/path#-readme-tab-
   sqflite: ^1.1.6+5 # Allows Database SQLite connection for local storage - https://pub.dev/packages/sqflite
-  location:
-    ^2.3.5 # Allows usage of user location - https://pub.dev/packages/location # Be sure to edit AndroidManifest and Ios plist and gradle
+  location: ^2.3.5 # Allows usage of user location - https://pub.dev/packages/location # Be sure to edit AndroidManifest and Ios plist and gradle
+  google_maps_flutter:
+    ^0.5.21+3 # Allows usage of Google Maps inside the application - https://pub.dev/packages/google_maps_flutter # Be sure to edit androidManifest and plist and ios/runner/appdelegate.swift for iOS
+
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
