--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,9 @@ dependencies:
   path: ^1.6.4 # Allows us to join local file system paths -  https://pub.dev/packages/path#-readme-tab-
   sqflite: ^1.1.6+5 # Allows Database SQLite connection for local storage - https://pub.dev/packages/sqflite
   location: ^2.3.5 # Allows usage of user location - https://pub.dev/packages/location # Be sure to edit AndroidManifest and Ios plist and gradle
-  google_maps_flutter:
-    ^0.5.21+3 # Allows usage of Google Maps inside the application - https://pub.dev/packages/google_maps_flutter # Be sure to edit androidManifest and plist and ios/runner/appdelegate.swift for iOS
-
+  google_maps_flutter: ^0.5.21+3 # Allows usage of Google Maps inside the application - https://pub.dev/packages/google_maps_flutter # Be sure to edit androidManifest and plist and ios/runner/appdelegate.swift for iOS
+  http:
+    ^0.12.0+2 # allows http requests - https://pub.dev/packages/http#-readme-tab-
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
